--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,14 @@
+.container {
+    width: 100%;
+    display: block;
+    padding: 40px;
+    box-sizing: border-box;
+}
+
 table {
     background: white;
     border: 1px solid #3f3f3f;
+    width: 100%;
 }
 
 thead,
